# study

./: README.md
blazer/: README.md
blazer/TodoList/: README.md  TodoItem.cs
blazer/TodoList/Components/Pages/: Todo.razor
blazer/TodoList/Properties/: launchSettings.json
blazer/sample/: Program.cs  sample.sln
blazer/sample/Components/Layout/: NavMenu.razor
blazer/sample/Properties/: launchSettings.json
cuda/ConvertCameraImage/: CMakeLists.txt  ConvertImage.cu  ConvertImage2D.cu
cuda/ConvertImage/: CMakeLists.txt  ConvertImage.cu
cuda/WarpAffine/: CMakeLists.txt  WarpAffine.cu
git/: RABBITVCS.md
java_script/: bug_code_01.html  bug_code_02.html  get_date.html  sample.html
jetson/: BACKUP.md  JETBOT.md  KERNEL.md  README.md  REMOTE.md  VIM.md  VSCODE.md
jetson/documents/: GPIO.md  KERNEL.md  OPENCV.md  REMOTE.md  REMOTE_MATE.md  VSCODE.md
jetson/source/gpio_7seg/: gpio_7seg.py
jetson/source/realsense_image/: realsense_image.py
jetson/source/transport_camera_images/host/: host.py
pcl/cluster_extraction/: CMakeLists.txt  cluster_extraction.cpp  cluster_extraction.h
pcl/statistical_removal/: statistical_removal.cpp
shared_ptr/: CMakeLists.txt  CalcTest.cpp  CalcTest.h  main.cpp
viewer/: CMakeLists.txt  common.cpp  common.h  viewer.cpp  viewer.h
vscode/: CPPLINT.md
